--- a/notebooks/SW_Ass2_wo_2024.ipynb
+++ b/notebooks/SW_Ass2_wo_2024.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -77,7 +77,16 @@
     "id": "9gpHw90keMJf",
     "outputId": "7ae1fe64-8d85-4a47-cfdf-422284954d81"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "//upload.wikimedia.org/wikipedia/commons/thumb/5/57/Imagen_de_los_canales_conc%C3%A9ntricos_en_%C3%81msterdam.png/268px-Imagen_de_los_canales_conc%C3%A9ntricos_en_%C3%81msterdam.png\n",
+      "https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Imagen_de_los_canales_conc%C3%A9ntricos_en_%C3%81msterdam.png/268px-Imagen_de_los_canales_conc%C3%A9ntricos_en_%C3%81msterdam.png\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "\n",
@@ -92,7 +101,8 @@
     "soup = BeautifulSoup(req.text)\n",
     "#print(req.text)\n",
     "image1 = soup.findAll('table', class_='infobox')[0].find('img')\n",
-    "print(image1['src'])  \n"
+    "print(image1['src'])\n",
+    "print('https:' + image1['src'])\n"
    ]
   },
   {
