--- a/notebooks/SW_Ass4-2024.ipynb
+++ b/notebooks/SW_Ass4-2024.ipynb
@@ -7,8 +7,8 @@
     "*****************************************************\n",
     "# The Social Web Assignment 4: Recommendation\n",
     "\n",
-    "- Instructors: Davide Ceolin, Emma Beauxis-Aussalet.\n",
-    "- TAs: Zubaria Inayat, Maxim Sergeev, Zhuofan Mei, Alexander Schmatz, Ling Jin.\n",
+    "- Instructor: Davide Ceolin, Filip Ilievski, Zubaria Inayat\n",
+    "- TAs: Danae-Angeliki Mitsea, Alexander Schmatz, Sandro Barres-Hamers, Márton Balázs Bodó.\n",
     "- Exercises for Hands-on session 4 \n",
     "*****************************************************\n",
     "\n",
