Updated Assignment 3, changes in Assignment 1

--- a/notebooks/SW_Ass1_Mast_2025.ipynb
+++ b/notebooks/SW_Ass1_Mast_2025.ipynb
@@ -375,7 +375,14 @@
    "source": [
     "### Task 3\n",
     "\n",
-    "You are now ready to parse usernames, hashtags and text (words) from the results you previously obtained in Task 2 (e.g. `statuses_2`). While doing it, make sure to leave the variables created in 2.2 untouched. Instead, create your own variable names, which you'll be using soon.\n"
+    "In this task, you will work with the from the results you previously obtained in Task 2 (e.g. `statuses_2`). You already learned how to clean the text and extract all words - now you will extend this and also extract usernames and hashtags. While doing it, make sure to leave the variables created in 2.2 untouched. Instead, create your own variable names (`toots2`, `words2`), which you'll be using soon.\n",
+    "\n",
+    "**What you should do:**\n",
+    "\n",
+    "1. Clean the toot text again and save it in a new list (e.g. `toots2`)\n",
+    "2. From this cleaned text, extract: all words, all usernames, all hashtags\n",
+    "3. Store each of them in separate variables\n",
+    "4. Print your results in a readable way (you can use `json.dumps(..., indent=1)`)"
    ]
   },
   {
@@ -419,9 +426,9 @@
    "source": [
     "from collections import Counter\n",
     "\n",
-    "for item in [words]:\n",
-    "    c = Counter(item)\n",
-    "    \n",
+    "hashtags = [word for word in words if word.startswith('#')]\n",
+    "c = Counter(hashtags)\n",
+    "\n",
     "print(c.most_common()[:10]) # top 10"
    ]
   },
@@ -605,15 +612,19 @@
    "metadata": {},
    "source": [
     "### Task 6 (advanced)\n",
+    "In this task, you will perform a small data analysis on a Toot account. You can choose one of the following options:\n",
     "\n",
-    "If you have a Toot account with a nontrivial number of tweets you can do some analysis of your own account.\n",
-    "Check the documentation on how to access your toots.\n",
+    "**Option A: Use your own Toot account** \\\n",
+    "If you have a Toot account with a few toots posted, fetch your own toots and analyse them.\n",
     "\n",
+    "**Option B: Analyse another user’s Toot account**\\\n",
+    "If you don’t want to use your own account, you may select any public user on Mastodon and analyse their toots instead.\n",
     "\n",
-    "\n",
-    "What are the most common terms that appear in your toot? \\\n",
+    "Using the toots you retrieved, answer the following:\\\n",
+    "What are the most common terms (words, hashtags, etc.) that appear in your toot? \\\n",
     "Which toot was replied the most?\\\n",
-    "How many of your toots are retweeted (and why do you think this is the case)?"
+    "How many of your toots were boosted (re-tooted)? Why do you think those toots were boosted?\\\n",
+    "You can present your findings with print statements or a table (e.g., using PrettyTable)."
    ]
   },
   {
